# web-rust

./: .env.template  .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  schema.rs
templates/: base.html  book_review.html  index.html  login.html  new_book.html
